[project]
name = "ytqa"
version = "0.1.0"
description = "YouTube transcript Q&A CLI using Claude"
requires-python = ">=3.10"
dependencies = [
    "youtube-transcript-api",
    "anthropic",
    "python-dotenv>=1.2.2",
    "textual>=8.2.7",
    "yt-dlp",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
]
