[project]
name = "ytask"
version = "0.1.0"
description = "YouTube research assistant — search, synthesise, and converse using transcripts"
requires-python = ">=3.10"
dependencies = [
    "youtube-transcript-api",
    "anthropic",
    "python-dotenv>=1.2.2",
    "textual>=8.2.7",
    "yt-dlp",
    "httpx>=0.28.0",
    "httpcore>=1.0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
]
